Doc wordsmithing (#81)
* adding changes

* more cleanup